// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests an article  tests if article details is not null 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <li
        class="item_container"
        data-testid="article"
      >
        <div
          class="image_wrapper"
        >
          <img
            alt="Newspaper image"
            class="image_style"
            src="https://image.cnbcfm.com/api/v1/image/105375236-1533317591071rtx6drjw.jpg?v=1571332846"
          />
        </div>
        <div
          class="source"
        >
          <h2
            class="heading"
          >
            Coca-Cola stock jumps as strong sales of Coke Zero Sugar continue to drive revenue growth - CNBC
          </h2>
          <div
            class="writer"
          >
            <div
              class="publishedAt"
            >
              Published in: 
              2019-10-18T10:42:46Z
            </div>
            <div
              class="author"
            >
              CNBC
            </div>
            <div>
              <b>
                <i>
                  Unread
                   article
                </i>
              </b>
            </div>
          </div>
        </div>
      </li>
    </div>
  </body>,
  "container": <div>
    <li
      class="item_container"
      data-testid="article"
    >
      <div
        class="image_wrapper"
      >
        <img
          alt="Newspaper image"
          class="image_style"
          src="https://image.cnbcfm.com/api/v1/image/105375236-1533317591071rtx6drjw.jpg?v=1571332846"
        />
      </div>
      <div
        class="source"
      >
        <h2
          class="heading"
        >
          Coca-Cola stock jumps as strong sales of Coke Zero Sugar continue to drive revenue growth - CNBC
        </h2>
        <div
          class="writer"
        >
          <div
            class="publishedAt"
          >
            Published in: 
            2019-10-18T10:42:46Z
          </div>
          <div
            class="author"
          >
            CNBC
          </div>
          <div>
            <b>
              <i>
                Unread
                 article
              </i>
            </b>
          </div>
        </div>
      </div>
    </li>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Tests an article  tests list items 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <li
        class="item_container"
        data-testid="article"
      >
        <div
          class="image_wrapper"
        >
          <img
            alt="Newspaper image"
            class="image_style"
            src="https://image.cnbcfm.com/api/v1/image/105375236-1533317591071rtx6drjw.jpg?v=1571332846"
          />
        </div>
        <div
          class="source"
        >
          <h2
            class="heading"
          >
            Coca-Cola stock jumps as strong sales of Coke Zero Sugar continue to drive revenue growth - CNBC
          </h2>
          <div
            class="writer"
          >
            <div
              class="publishedAt"
            >
              Published in: 
              2019-10-18T10:42:46Z
            </div>
            <div
              class="author"
            >
              CNBC
            </div>
            <div
              data-testid="viewText"
            >
              <b>
                <i>
                  Read
                   article
                </i>
              </b>
            </div>
          </div>
        </div>
      </li>
    </div>
  </body>,
  "container": <div>
    <li
      class="item_container"
      data-testid="article"
    >
      <div
        class="image_wrapper"
      >
        <img
          alt="Newspaper image"
          class="image_style"
          src="https://image.cnbcfm.com/api/v1/image/105375236-1533317591071rtx6drjw.jpg?v=1571332846"
        />
      </div>
      <div
        class="source"
      >
        <h2
          class="heading"
        >
          Coca-Cola stock jumps as strong sales of Coke Zero Sugar continue to drive revenue growth - CNBC
        </h2>
        <div
          class="writer"
        >
          <div
            class="publishedAt"
          >
            Published in: 
            2019-10-18T10:42:46Z
          </div>
          <div
            class="author"
          >
            CNBC
          </div>
          <div
            data-testid="viewText"
          >
            <b>
              <i>
                Read
                 article
              </i>
            </b>
          </div>
        </div>
      </div>
    </li>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
